# pvp-arena

./: .env.example  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250808_000001_init_tables.py
backend/app/: main.py
backend/app/api/v1/: auth.py  profile.py
backend/app/core/: config.py  deps.py
backend/app/db/: base.py
backend/app/game/: __init__.py  engine.py  mapgen.py  physics.py  powerups.py
backend/app/matchmaking/: __init__.py  bots.py  queue.py
backend/app/models/: match.py  player_state.py  user.py
backend/app/schemas/: auth.py  match.py
backend/app/ws/: __init__.py  events.py  manager.py
client/: env.local  index.html  package.json  vite.config.ts
client/public/: 404.html  test.html
client/src/: main.tsx
client/src/app/: App.tsx  api.ts  bridge.ts  router.tsx  socket.ts
client/src/features/game/: Arena.tsx
client/src/features/game/hud/: HUD.tsx
client/src/features/lobby/: MatchSearch.tsx
client/src/features/profile/: Inventory.tsx
client/src/shared/: config.ts  types.ts
client/src/styles/: index.css
docker/: backend.Dockerfile  client.Dockerfile  nginx.conf
