[tool.poetry]
name = "vk-pvp-arena-backend"
version = "0.1.0"
description = "FastAPI backend for VK PvP Arena"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
psycopg = {version = "^3.1.19", extras = ["binary"]}
alembic = "^1.13.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
python-jose = "^3.3.0"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"